--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #E3DEE1;
+    background-color: white;
 }
 
 .header {
@@ -18,4 +18,18 @@ body{
 
 .elemento-lista{
     margin-right: 5vh;
+    
+}
+
+.container-immagine{
+    width: 100%; 
+    height: 80vh;
+    overflow: hidden;
+}
+
+.immagine-home{
+    width: 100%; 
+    height: auto;
+    display: block; 
+    
 }
