--- a/style.css
+++ b/style.css
@@ -31,4 +31,16 @@ body{
     width: 100%;
     height: auto; 
     display: block;
+    filter: blur(3px);
+}
+
+.text-image{
+    position: absolute;
+    top: 30vh;
+    left: 10vh; 
+    width: auto;
+    color: #fff; 
+    z-index: 1;
+    font-size: 23vh;
+    font-family: Arial, Helvetica, sans-serif;
 }
