--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
     background-color: white;
+    margin: 0;
+    padding: 0;
 }
 
 .header {
@@ -9,6 +11,7 @@ body{
 .logo {
     flex: 0.5;
     width: 7vh;
+    margin-left: 0.5vh;
 }  
 
 .nav-bar {
@@ -37,13 +40,15 @@ body{
     width: 100%;
     height: 80vh;
     overflow: hidden;
+    border: none; 
+    display: block; 
 }
 
 .immagine-home{
     width: 100%;
     height: auto; 
     display: block;
-    filter: blur(3px);
+    border: none;
 }
 
 .text-image{
