--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Sottotitoli';
+    src: url('./Assets/Fonts/Qwigley-Regular.ttf') format('truetype'); 
+}
+
 body{
     background-color: white;
     margin: 0;
@@ -21,7 +26,7 @@ body{
 
 .lingua{
     margin-top: 2.3vh;
-    margin-right: 1vh;
+    margin-right: 2vh;
     flex: 0.5;
 }
 
@@ -62,13 +67,25 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.sottotitolo{
+    position: absolute;
+    top: 47vh;
+    left: 58.5vh; 
+    width: auto;
+    color: #fff; 
+    z-index: 1;
+    font-size: 10vh;
+    font-family:'Sottotitoli';
+    transform: rotate(-10deg);
+}
+
 .button {
     background-color: white; 
     border: none; 
     padding: 5px 10px;
     cursor: pointer; 
     border-radius: 8px; 
-    transition: background-color 0.3s; 
+    transition: background-color 0.3s;
 }
 
 
