--- a/style.css
+++ b/style.css
@@ -127,6 +127,5 @@ body{
 .location {
     display: flex;
     height: 10vh;
-    text-align: center;
-    align-content: center;
+    margin-left: 58vh;
 }
