--- a/style.css
+++ b/style.css
@@ -149,14 +149,15 @@ body{
 .sub-info-container{
     display: flex;
     width: 100%;
-    height: 50vh;
+    height: 55vh;
     background-color: rgb(30, 255, 0);
 }
 .image-container{
     margin: 0;
     width: 45%;
     height: 100%;
-    background-color: cadetblue;
+    background-color: #ffff;
+    overflow: hidden;
 }
 .contacts-container{
     margin: 0;
@@ -164,3 +165,20 @@ body{
     height: 100%;
     background-color: coral;
 }
+.splide {
+    position: relative;
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+  }
+  
+  .splide__track {
+    height: 100%;
+  }
+  
+  .splide__slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down;
+  }
+  
