--- a/style.css
+++ b/style.css
@@ -156,14 +156,14 @@ body{
     margin: 0;
     width: 45%;
     height: 100%;
-    background-color: #ffff;
+    background-color: #fff;
     overflow: hidden;
 }
 .contacts-container{
     margin: 0;
     width: 55%;
     height: 100%;
-    background-color: coral;
+    background-color: #5C6B5F;
 }
 .splide {
     position: relative;
@@ -179,6 +179,69 @@ body{
   .splide__slide img {
     width: 100%;
     height: 100%;
-    object-fit: scale-down;
+    object-fit: cover;
   }
   
+  .indirizzo{
+    position: absolute;
+    top: 105vh;
+    left: 85vh; 
+    width: auto;
+    z-index: 1;
+    font-size: 6vh;
+    font-family:'Sottotitoli';
+    transform: rotate(-10deg);
+    color: #fff;
+}
+
+.indirizzo-ovale{
+    position: absolute;
+    top: 105vh;
+    left: 81.7vh; 
+    width: 20vh;
+    height: 6vh;
+    z-index: 1;
+    transform: rotate(-10deg);
+    border: 1px solid #fff;
+    border-radius: 100%;
+}
+
+.orari{
+    position: absolute;
+    top: 125vh;
+    left: 87vh; 
+    width: auto;
+    z-index: 1;
+    font-size: 6vh;
+    font-family:'Sottotitoli';
+    transform: rotate(-10deg);
+    color: #fff;
+}
+
+.orari-ovale{
+    position: absolute;
+    top: 125vh;
+    left: 81.7vh; 
+    width: 20vh;
+    height: 6vh;
+    z-index: 1;
+    transform: rotate(-10deg);
+    border: 1px solid #fff;
+    border-radius: 100%;
+}
+
+/* Nascondi l'alone dietro le frecce */
+.splide__arrow  {
+    text-shadow: none !important; /* Rimuove l'alone dietro il testo */
+}
+
+/* Modifica il colore delle frecce, se necessario */
+.splide__arrow::before {
+    color: #000; /* Colore nero per le frecce */
+}
+/* Rimuove l'alone dietro le frecce con massima priorità */
+.splide__arrow.splide__arrow--prev::before,
+.splide__arrow.splide__arrow--next::before {
+    text-shadow: none !important;
+    filter: none;
+}
