--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@
     src: url('./Assets/Fonts/helveticaneue-roman.otf') format('truetype'); 
 }
 
+@font-face {
+    font-family: 'Barra';
+    src: url('./Assets/Fonts/typeunion-palo-wide-light.otf') format('truetype'); 
+}
+
 body{
     background-color: white;
     margin: 0;
@@ -41,7 +46,8 @@ body{
     margin-right: 5vh;
     text-decoration: none;
     color: black;
-    font-family: 'Titoli';
+    font-family: 'Barra';
+    font-weight: bold;
 }
 
 .elemento-lista:hover{
@@ -95,7 +101,7 @@ body{
     color: #fff; 
     z-index: 1;
     transform: rotate(-10deg);
-    border: 1px solid #fff;
+    border: 1.5px solid #fff;
     border-radius: 100%;
 }
 
@@ -106,7 +112,8 @@ body{
     cursor: pointer; 
     border-radius: 8px; 
     transition: background-color 0.3s;
-    font-family: 'Titoli';
+    font-family: 'Barra';
+    font-weight: bold;
 }
 
 
@@ -135,7 +142,8 @@ body{
 .location * {
     margin-left: auto;
     margin-right: auto;
-    font-family: 'Titoli';
+    font-family: 'Barra';
+    font-weight: bold;
 }
 .location *:hover{
     color: #5C6B5F;
@@ -184,7 +192,7 @@ body{
   
   .indirizzo{
     position: absolute;
-    top: 105vh;
+    top: 103vh;
     left: 85vh; 
     width: auto;
     z-index: 1;
@@ -196,7 +204,7 @@ body{
 
 .indirizzo-ovale{
     position: absolute;
-    top: 105vh;
+    top: 103vh;
     left: 81.7vh; 
     width: 20vh;
     height: 6vh;
@@ -208,8 +216,8 @@ body{
 
 .orari{
     position: absolute;
-    top: 125vh;
-    left: 87vh; 
+    top: 120vh;
+    left: 150vh; 
     width: auto;
     z-index: 1;
     font-size: 6vh;
@@ -220,7 +228,31 @@ body{
 
 .orari-ovale{
     position: absolute;
-    top: 125vh;
+    top: 120vh;
+    left: 144.8vh; 
+    width: 20vh;
+    height: 6vh;
+    z-index: 1;
+    transform: rotate(-10deg);
+    border: 1px solid #fff;
+    border-radius: 100%;
+}
+
+.telefono{
+    position: absolute;
+    top: 138vh;
+    left: 85.5vh; 
+    width: auto;
+    z-index: 1;
+    font-size: 6vh;
+    font-family:'Sottotitoli';
+    transform: rotate(-10deg);
+    color: #fff;
+}
+
+.telefono-ovale{
+    position: absolute;
+    top: 138vh;
     left: 81.7vh; 
     width: 20vh;
     height: 6vh;
@@ -230,18 +262,7 @@ body{
     border-radius: 100%;
 }
 
-/* Nascondi l'alone dietro le frecce */
-.splide__arrow  {
-    text-shadow: none !important; /* Rimuove l'alone dietro il testo */
-}
-
-/* Modifica il colore delle frecce, se necessario */
-.splide__arrow::before {
-    color: #000; /* Colore nero per le frecce */
-}
-/* Rimuove l'alone dietro le frecce con massima priorità */
-.splide__arrow.splide__arrow--prev::before,
-.splide__arrow.splide__arrow--next::before {
-    text-shadow: none !important;
+.splide__arrow{
+    box-shadow: none;
     filter: none;
 }
