--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ body{
 }
 
 .logo {
-    max-width: 100px; /* Larghezza massima del logo */
-    max-height: 100px; /* Altezza massima del logo */
+    max-width: 80px; /* Larghezza massima del logo */
+    max-height: 80px; /* Altezza massima del logo */
     margin-left: 10px; /* Margine sinistro per separare dal bordo sinistro */
 }
 .logo img{
@@ -39,7 +39,8 @@ body{
     flex-grow: 1; /* La navbar occupa lo spazio rimanente */
     display: flex;
     justify-content: center; /* Centra gli elementi orizzontalmente */
-    align-items: center; /* Centra gli elementi verticalmente */
+    align-items: center;
+     /* Centra gli elementi verticalmente */
 }
 
 .lingua {
@@ -56,6 +57,7 @@ body{
     text-decoration: none;
     color: black;
     font-family: 'Barra';
+    font-weight: bold;
 }
 
 .elemento-lista:hover{
@@ -154,6 +156,8 @@ body{
     margin-right: auto;
     font-family: 'Barra';
     font-weight: bold;
+    height: 100%;
+    width: 100%;
 }
 .location *:hover{
     color: #5C6B5F;
@@ -290,10 +294,11 @@ body{
 .contacts-container{
     display: flex;
     flex-direction: column;
+    background-color: #5C6B5F;
 }
 .contacts-container div{
     height: 10%;
-    color: #5C6B5F;
+    color: #ffffff;
 }
 .address{
     display: flex;
@@ -331,7 +336,7 @@ body{
     font-size: 3vh;
     font-weight: bold;
     color: white;
-    font-family: 'Helvetica Neue';
+    font-family: 'Titoli';
     margin-left: 5vh;
 }
 .address,
@@ -344,4 +349,31 @@ body{
 .time-text{
     display: flex;
     flex-direction: column;
+}
+.location-text{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+.location-text::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #5C6B5F; /* Colore di riempimento iniziale */
+    transition: height 0.3s ease-in-out; /* Transizione per l'altezza */
+    z-index: -1; /* Sposta l'elemento di sfondo dietro il testo */
+    
+}
+
+.location-text:hover::before {
+    height: 100%; /* Altezza finale, riempie tutto lo spazio verticale */
+}
+.location-text:hover {
+    color: #fff; /* Colore del testo al passaggio */
+    transition:  .3s;
 }
