--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ body{
 .sub-info-container{
     display: flex;
     width: 100%;
-    height: 55vh;
+    height: 50vh;
     background-color: rgb(30, 255, 0);
 }
 .image-container{
@@ -376,4 +376,8 @@ body{
 .location-text:hover {
     color: #fff; /* Colore del testo al passaggio */
     transition:  .3s;
+}
+.map-container{
+    width: 100%;
+    height: 50.5vh;
 }
