--- a/style.css
+++ b/style.css
@@ -362,7 +362,7 @@ footer{
     margin-top: 2vh;
 }
 .antipasto{
-    width: 35vh;
+    width: 25%;
     height: 35vh;
     overflow: hidden;
     border: none; 
