--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ footer{
 }
 .menu-container{
     height: 1000vh;
-    width: auto;
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -359,24 +359,31 @@ footer{
 .antipasti-container{
     display: flex;
     flex-direction:row;
+    width: 100%;
     margin-top: 2vh;
 }
 .antipasto{
-    width: 25%;
+    width: 100%;
     height: 35vh;
     overflow: hidden;
-    border: none; 
     display: block;
-    object-fit: cover;
+    object-fit:cover;
     padding-bottom: 2vh;
 }
+
 .antipasto-didascalia{
-    margin-left: 5.8vh;
+    width: 25%;
+    margin-left: 3vh;
+    margin-right: 3vh;
     font-family: 'Barra';
     font-size: 2.3vh;
-    font-weight: bold;
-    text-align: center;
+    text-align: left;
+    padding-bottom: 1.5vh;
 }
 .descrizione{
     font-size: 1.7vh;
+}
+.prezzo{
+    text-align: right;
+    margin-top: -2.3vh;
 }
