--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ footer{
     display: flex;
     flex-direction:row;
     width: 100%;
-    margin-top: 2vh;
+    margin-top: 3vh;
 }
 .antipasto{
     width: 100%;
@@ -382,8 +382,17 @@ footer{
 }
 .descrizione{
     font-size: 1.7vh;
+    width: 80%;
 }
 .prezzo{
+    width: 35%;
     text-align: right;
-    margin-top: -2.645vh;
+}
+.nome-piatto{
+    width: 65%;
+    text-align: left;
+}
+.nome-prezzo{
+    display: flex;
+    flex-direction: row;
 }
