--- a/style.css
+++ b/style.css
@@ -19,33 +19,35 @@ body{
     padding: 0;
 }
 
+.parte-invariata{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 .header {
     display: flex;
-    justify-content: space-between; 
-    align-items: center; 
-    height: 100px; 
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
 }
 
 .logo {
-    max-width: 100px; 
-    max-height: 80px; 
-    margin-left: 10px;
+    margin-left: 5vh;
+    width: 25%;
 }
 .logo img{
     margin-left: 0;
 }
-.nav-bar {
-    flex-grow: 1; 
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
+.nav-bar { 
+    text-align: center; 
+    width: 50%;
 }
 
 .lingua {
-    width: 90px; 
-    max-height: 100px; 
-    margin-right: 10px;
-    text-align: center;
+    text-align: right;
+    margin-right: 5vh;
+    width: 25%;
 }
 
 
@@ -66,15 +68,11 @@ body{
     width: 100%;
     height: 80vh;
     overflow: hidden;
-    border: none; 
-    display: block; 
 }
 
 .immagine-home{
     width: 100%;
-    height: auto; 
-    display: block;
-    border: none;
+    height: auto;
 }
 
 .text-image{
