--- a/style.css
+++ b/style.css
@@ -443,3 +443,39 @@ footer{
     left: 11vh;
     color: white;
 }
+.menu-sec{
+    height: 70vh;
+}
+.men-texts{
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 12vh;
+}
+.men-title{
+    color: #000000;
+    font-size: 10vh;
+    font-family: 'Sottotitoli';
+    transform: rotate(-10deg);
+    
+}
+.men-ovale{
+    width: 22vh;
+    height: 7vh;
+    color: #000000;
+    transform: rotate(-10deg);
+    border: 1.5px solid #000000;
+    border-radius: 100%;
+    margin-left: -16vh;
+    margin-top: 2vh;
+}
+.men-subtext{
+    font-family: "Titoli";
+    color: #5C6B5F;
+    max-width: 85vh;
+    margin-left: 10vh;
+    margin-top: 2vh;
+    font-size: 18px;
+}
