--- a/style.css
+++ b/style.css
@@ -630,5 +630,46 @@ footer{
     margin-left: 15%;
 }
 .ab-ovale-end{
-    
+    width: 20vh;
+    height: 5vh;
+    color: #ffffff; 
+    z-index: -1;
+    transform: rotate(-10deg);
+    border: 0.8px solid #ffffff;
+    border-radius: 100%;
+    margin-left: 8vh;
+    margin-bottom: -6vh;
+}
+.ab-text-end{
+    width: auto;
+    color: #ffffff; 
+    z-index: 3;
+    font-size: 6.5vh;
+    font-family:'Sottotitoli';
+    transform: rotate(-10deg);
+    margin-left: 8vh;
+}
+.ab-subtext-end{
+    color: rgba(255, 255, 255, 0.761);
+    font-size: 24px;
+    font-weight: bold;
+    font-family: 'Titoli';
+    line-height: 1.5;
+    max-width: 80vh;
+    margin-left: 1%;
+}
+.gallery-sec{
+    height: 83vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.gallery-subsec{
+    height: 100%;
+    width: 80%;
+
+}
+.gallery-textsbtns{
+    display: flex;
+    flex-direction: row;
 }
