--- a/style.css
+++ b/style.css
@@ -659,7 +659,7 @@ footer{
     margin-left: 1%;
 }
 .gallery-sec{
-    height: 83vh;
+    height: 88vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -672,4 +672,177 @@ footer{
 .gallery-textsbtns{
     display: flex;
     flex-direction: row;
+    width: 100%;
+    height: 25%;
+}
+.gallery-text{
+    width: auto;
+    color: #000000; 
+    z-index: 1;
+    font-size: 11vh;
+    font-family:'Sottotitoli';
+    transform: rotate(-10deg);
+    margin-top: 8vh;
+    margin-left: 2vh;
+}
+
+.gallery-ovale{
+    width: 27vh;
+    height: 7vh;
+    color: #000000; 
+    z-index: -1;
+    transform: rotate(-10deg);
+    border: 0.8px solid #000000;
+    border-radius: 100%;
+    margin-top: -11vh;
+}
+.gallery-subtexts{
+    color: rgba(39, 39, 39, 0.761);
+    font-size: 24px;
+    font-weight: bold;
+    font-family: 'Titoli';
+    line-height: 1.5;
+    max-width: 40vh;
+    margin-left: 6%;
+    margin-top: 11vh;
+}
+.gallery-btn{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+.gallery-btn-cont{
+    display: flex;
+    width: 16vh;
+    height: 5vh;
+    background-color: #5C6B5F;
+    border-radius: 12px;
+    align-items: center;
+    justify-content: center;
+    transition: background-color .3s ease;
+    margin-bottom: 3vh;
+}
+.gallery-btn-cont a{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: white;
+    font-family: 'Titoli';
+    font-size: 20px;
+    
+}
+
+.gallery-btn-cont:hover{
+    background-color: #fff;
+}
+.gallery-btn-cont:hover a{
+    color: #5C6B5F;
+}
+.gallery-photos{
+    width: 100%;
+    height: 75%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.gallery-photo1{
+    height: 100%;
+    width: 37%;
+}
+.gallery-photo23{
+    display: flex;
+    height: 100%;
+    width: 30.5%;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.gallery-photo4{
+    height: 100%;
+    width: 30.5%;
+}
+
+.gallery-photo2{
+    width: 100%;
+    height: 40%;
+}
+.gallery-photo3{
+    width: 100%;
+    height: 58%;
+}
+
+.gallery-photo1 img,
+.gallery-photo2 img,
+.gallery-photo3 img,
+.gallery-photo4 img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.contact-sec{
+    width: 100%;
+    height: 40vh;
+    background-color: #383838;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.contact-texts{
+    width: 80%;
+    height: 40%;
+    color: rgb(255, 255, 255);
+    font-family: 'Titoli';
+    display: flex;
+    flex-direction: row;
+}
+.contact-text1{
+    width: 50%;
+    font-size: 3vh;
+    max-width: 70vh;
+}
+.contact-text2{
+    display: flex;
+    width: 50%;
+    font-size: 2vh;
+    max-width: 50vh;
+    margin-left: 20vh;
+    color: #ffffffa0;
+}
+.contact-button{
+    display: flex;
+    width: 14vh;
+    height: 4vh;
+    background-color: #ffffff;
+    border-radius: 12px;
+    transition: background-color .3s ease;
+    justify-self: flex-start;
+    margin-right: -73%;
+    margin-bottom: 2%;
+}
+.contact-button a{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: #383838;
+    font-family: 'Titoli';
+}
+.contact-button:hover {
+    background-color: #383838;
+}
+.contact-button:hover a{
+    color: #ffffff;
+}
+.contact-spacer{
+    width: 80%;
+    height: 1px;
+    background-color: #ffffff;
 }
