--- a/style.css
+++ b/style.css
@@ -321,6 +321,7 @@ footer{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    font-family: 'Titoli';
 }
 .informative a{
     text-decoration: none;
