--- a/style.css
+++ b/style.css
@@ -882,8 +882,27 @@ footer{
     width: 90%;
     color: white;
     white-space: space-between;
+    margin-left: 7%;
 }
 .about-first-title{
-    font-size: 3vh;
+    font-size: 4vh;
     max-width: 60%;
+}
+.start-comma,.end-comma{
+    font-size: 20vh;
+    color: #ffffff49;
+}
+
+.start-comma{
+    margin-bottom: -14.5vh;
+    margin-left: -5.5vh;
+}
+.end-comma{
+    margin-left: 46.5vh;
+    margin-top: -6.5vh;
+}
+.about-first-subtitle{
+    max-width: 47%;
+    font-size: 2vh;
+    color: #ffffffc8;
 }
