--- a/style.css
+++ b/style.css
@@ -1103,12 +1103,13 @@ footer{
   }
 
   .controls button {
-    color: white;
-    background-color: black;
-    border: 1px solid black;
-    border-radius: 100%;
+    color: #000000;
+    background: none;
+    border: none;
     cursor: pointer;
-    font-size: 2vh;
+    font-size: 3vh;
+    height: 5vh;
+    width: 5vh;
   }
 
   .navigation {
@@ -1131,4 +1132,16 @@ footer{
 
   .active.double {
     width: 8vh; 
+  }
+
+  .carousel1{
+    width: 33.3%;
+    overflow: hidden;
+    position: relative;
+  }
+
+  .carousel1 img{
+    width: 100%;
+    height: 60vh;
+    object-fit: cover;
   }
