--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@
 }
 
 body{
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+body{
     width: 100%;
     height: 100vh;
     background-color: white;
@@ -1148,7 +1152,7 @@ footer{
     object-fit: cover;
   }
 
-  @media screen and (max-width:730px) {
+  @media screen and (max-width:770px) {
     .menu {
         --s: 24px; /* control the size */
         --c: black; /* the color */
@@ -1212,5 +1216,26 @@ footer{
       }
       .parte-invariata{
         width: 100%;
+      }
+      .nav-bar{
+        display: none;
+      }
+      .logo{
+        margin: 0;
+        width: max-content;
+      }
+      .logo img{
+        width: 120px;
+        height: 120px;
+      }
+      .lingua{
+        margin: 0;
+        width: 10vh;
+      }
+      .butn-menu{
+        width: 10vh;
+      }
+      .header{
+        justify-content: space-between;
       }
   }
